adding all the tests for the report command